--- a/index.html
+++ b/index.html
@@ -35,7 +35,35 @@
                 </div>
             </div>
         </header>
-        <main class="main"></main>
+        <main class="main">
+            <section class="homescreen">
+                <div class="homescreen__top">
+                    <div class="container">
+                        <h1 class="homescreen__title title w">Банкротство физических лиц<br><span>в г. Архангельск</span></h1>
+                    </div>
+                </div>
+                <div class="homescreen__bottom">
+                    <div class="container">
+                        <div class="homescreen__slider slider owl-carousel owl-theme">
+                            <div class="slider__item">
+                                <h3 class="slider__title">Избавьтесь от долгов совершенно легально!</h3>
+                                <a href="#" class="slider__button-back-call button-back-call">Подробная консультация</a>
+                            </div>
+                            <div class="slider__item">
+                                <h3 class="slider__title">Избавьтесь от долгов совершенно легально!</h3>
+                                <a href="#" class="slider__button-back-call button-back-call">Подробная консультация</a>
+                            </div>
+                            <div class="slider__item">
+                                <h3 class="slider__title">Избавьтесь от долгов совершенно легально!</h3>
+                                <a href="#" class="slider__button-back-call button-back-call">Подробная консультация</a>
+                            </div>
+                        </div>
+                        <!-- display: absolute -->
+                        <img src="images/homescreen/01.png" alt="" class="homescreen__abs-image">
+                    </div>
+                </div>
+            </section>
+        </main>
         <footer class="footer">
             <div class="container"></div>
         </footer>
