--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- content -->
         <header class="header">
             <div class="container">
-                <div class="header__col">
+                <div class="header__left">
                     <div class="header__logo">
                         <div class="header__img">
                             <img src="images/header/logo.png" alt="">
@@ -29,7 +29,7 @@
                         <span>Архангельск</span>
                     </div>
                 </div>
-                <div class="header__col">
+                <div class="header__right">
                     <h3 class="header__phone">+7 (000) 000-00-00</h3>
                     <a href="#" class="header__button-back-call button-back-call">Заказать звонок</a>
                 </div>
@@ -39,7 +39,7 @@
             <section class="homescreen">
                 <div class="homescreen__top">
                     <div class="container">
-                        <h1 class="homescreen__title title w">Банкротство физических лиц<br><span>в г. Архангельск</span></h1>
+                        <h1 class="homescreen__title">Банкротство физических лиц<br><span>в г. Архангельск</span></h1>
                     </div>
                 </div>
                 <div class="homescreen__bottom">
@@ -62,6 +62,29 @@
                         <img src="images/homescreen/01.png" alt="" class="homescreen__abs-image">
                     </div>
                 </div>
+            </section>
+            <section class="instruction">
+                <div class="container">
+                    <div class="instruction__left">
+                        <h2 class="instruction__title title">Попали в тяжелое финансовое положение?</h2>
+                        <p class="instruction__text">За последний год работы мы уже помогли <span>более, чем 150 клиентам</span> выйти из трудной ситуации!</p>
+                    </div>
+                    <div class="instruction__right">
+                        <form action="#" class="instruction__form form">
+                            <h3 class="form__title">Получите бесплатно пошаговую инструкцию</h3>
+                            <p class="form__text">по процедуре банкротства прямо сейчас:</p>
+                            <input type="tel" name="tel" class="form__tel input-tel" placeholder="Введите ваш телефон" required>
+                            <input type="submit" class="form__button-back-call button-back-call" value="Получить инструкцию">
+                            <p class="form__text-we">Мы перезвоним в течение 5 минут</p>
+                            <p class="form__checkbox-container">
+                                <input type="checkbox" required><span>Согласен с <a href="#">обработкой персональных данных</a></span>
+                            </p>
+                        </form>
+                    </div>
+                </div>
+                <!-- position:absolute -->
+                <img src="images/instruction/02.png" alt="" class="instruction__abs-image image-1">
+                <img src="images/instruction/03.png" alt="" class="instruction__abs-image image-2">
             </section>
         </main>
         <footer class="footer">
