--- a/index.html
+++ b/index.html
@@ -86,6 +86,38 @@
                 <img src="images/instruction/02.png" alt="" class="instruction__abs-image image-1">
                 <img src="images/instruction/03.png" alt="" class="instruction__abs-image image-2">
             </section>
+            <section class="hard">
+                <div class="container">
+                    <h2 class="hard__title title">Сложная процедура банкротства?</h2>
+                    <h3 class="hard__subtitle subtitle">С нами это легко!</h3>
+                    <div class="hard__list">
+                        <div class="hard__item">
+                            <div class="hard__image">
+                                <img src="images/hard/01.png" alt="">
+                            </div>
+                            <p class="hard__text">С вами работает <span>персональный менеджер по банкротству,</span> который постоянно в курсе этапов вашего дела.</p>
+                        </div>
+                        <div class="hard__item">
+                            <div class="hard__image">
+                                <img src="images/hard/02.png" alt="">
+                            </div>
+                            <p class="hard__text">Соберем весь пакет документов. <span>С нами вы не тратите время и нервы!</span></p>
+                        </div>
+                        <div class="hard__item">
+                            <div class="hard__image">
+                                <img src="images/hard/03.png" alt="">
+                            </div>
+                            <p class="hard__text">Все гарантии мы <span>прописываем в договоре!</span></p>
+                        </div>
+                        <div class="hard__item">
+                            <div class="hard__image">
+                                <img src="images/hard/04.png" alt="">
+                            </div>
+                            <p class="hard__text">3 опытных финансовых управляющих в команде! <span>Ваше дело в надежных руках!</span></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container"></div>
