--- a/index.html
+++ b/index.html
@@ -118,6 +118,25 @@
                     </div>
                 </div>
             </section>
+            <section class="how">
+                <div class="container">
+                    <h2 class="how__title title">Как узнать стоимость услуг?</h2>
+                    <form action="#" class="how__form form">
+                        <h3 class="form__title">Наш консультант свяжется с вами и бесплатно проанализирует</h3>
+                        <p class="form__text">ваш долговой портфель, чтобы определить цену услуг</p>
+                        <p class="form__input-container">
+                            <input type="tel" name="tel" class="form__tel input-tel" placeholder="Введите ваш телефон" required>
+                            <input type="submit" class="form__button-back-call button-back-call" value="Получить инструкцию">
+                        </p>
+                        <p class="form__text-we">Мы перезвоним в течение 5 минут</p>
+                        <p class="form__checkbox-container">
+                            <input type="checkbox" required><span>Согласен с <a href="#">обработкой персональных данных</a></span>
+                        </p>
+                    </form>
+                </div>
+                <!-- position: absolute -->
+                <img src="images/how/01.png" alt="" class="how__abs-image">
+            </section>
         </main>
         <footer class="footer">
             <div class="container"></div>
