--- a/index.html
+++ b/index.html
@@ -137,6 +137,25 @@
                 <!-- position: absolute -->
                 <img src="images/how/01.png" alt="" class="how__abs-image">
             </section>
+            <section class="easy">
+                <div class="container">
+                    <h2 class="easy__title title">Удобно ли с нами работать?</h2>
+                    <div class="easy__list">
+                        <div class="easy__item easy__item-1">
+                            <h3 class="easy__name">Рассрочка до 12 месяцев</h3>
+                            <p class="easy__text">Наши клиенты зачастую находятся в сложном финансовом положении, поэтому у нас существует гибкая система оплаты</p>
+                        </div>
+                        <div class="easy__item easy__item-2">
+                            <h3 class="easy__name">Работаем в выходные</h3>
+                            <p class="easy__text">У вас плотный график?  - Не беда! Наш офис работает по выходным для большего удобства клиентов</p>
+                        </div>
+                        <div class="easy__item easy__item-3">
+                            <h3 class="easy__name">Оплата по результату</h3>
+                            <p class="easy__text"> Окончательная оплата происходит по завершению процедуры банкротства</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container"></div>
