--- a/index.html
+++ b/index.html
@@ -144,6 +144,61 @@
                     </div>
                 </div>
             </section>
+            <section class="proc">
+                <div class="container">
+                    <h2 class="proc__title title">Сколько длится процедура банкротства?</h2>
+                    <h3 class="proc__subtitle subtitle">В среднем, процедура банкротства длится от 6 до 12 месяцев</h3>
+                    <div class="proc__dots-container">
+                        <ul class='proc__dots'>
+                            <li class="proc__dot proc__dot-1"></li>
+                            <li class="proc__dot proc__dot-2"></li>
+                            <li class="proc__dot proc__dot-3"></li>
+                            <li class="proc__dot proc__dot-4"></li>
+                            <li class="proc__dot proc__dot-5"></li>
+                            <li class="proc__dot proc__dot-6"></li>
+                            <li class="proc__dot proc__dot-7"></li>
+                            <li class="proc__dot proc__dot-8"></li>
+                        </ul>
+                    </div>
+                    <div class="proc__slider slider owl-carousel owl-theme">
+                        <div class="slider__item">
+                            <h3 class="slider__title">Подготовка и сбор документов</h3>
+                            <p class="slider__text">Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас!</p>
+                        </div>
+                        <div class="slider__item">
+                            <h3 class="slider__title">Подготовка и сбор документов</h3>
+                            <p class="slider__text">Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас!</p>
+                        </div>
+                        <div class="slider__item">
+                            <h3 class="slider__title">Подготовка и сбор документов</h3>
+                            <p class="slider__text">Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас!</p>
+                        </div>
+                        <div class="slider__item">
+                            <h3 class="slider__title">Подготовка и сбор документов</h3>
+                            <p class="slider__text">Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас!</p>
+                        </div>
+                        <div class="slider__item">
+                            <h3 class="slider__title">Подготовка и сбор документов</h3>
+                            <p class="slider__text">Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас!</p>
+                        </div>
+                        <div class="slider__item">
+                            <h3 class="slider__title">Подготовка и сбор документов</h3>
+                            <p class="slider__text">Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас!</p>
+                        </div>
+                        <div class="slider__item">
+                            <h3 class="slider__title">Подготовка и сбор документов</h3>
+                            <p class="slider__text">Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас!</p>
+                        </div>
+                        <div class="slider__item">
+                            <h3 class="slider__title">Подготовка и сбор документов</h3>
+                            <p class="slider__text">Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас!</p>
+                        </div>
+                    </div>
+                    <a href="#" class="proc__button-back-call button-back-call">Начать процедуру банкротства</a>
+                </div>
+                <!-- position: absolute -->
+                <img src="images/proc/book.png" alt="" class="proc__abs-image">
+            </section>
         </main>
         <footer class="footer">
             <div class="container"></div>
