--- a/index.html
+++ b/index.html
@@ -199,6 +199,20 @@
                 <!-- position: absolute -->
                 <img src="images/proc/book.png" alt="" class="proc__abs-image">
             </section>
+            <section class="exp">
+                <div class="container">
+                    <h2 class="exp__title title">Опыт работы? - Более 10 лет!</h2>
+                    <h3 class="exp__subtitle subtitle">Посмотрите наши успешные решения по делам:</h3>
+                    <div class="exp__slider slider owl-carousel owl-theme">
+                        <a href="images/exp/01_.jpg" data-fancybox class="slider__item"><img src="images/exp/01.jpg" alt=""></a>
+                        <a href="images/exp/01_.jpg" data-fancybox class="slider__item"><img src="images/exp/01.jpg" alt=""></a>
+                        <a href="images/exp/01_.jpg" data-fancybox class="slider__item"><img src="images/exp/01.jpg" alt=""></a>
+                        <a href="images/exp/01_.jpg" data-fancybox class="slider__item"><img src="images/exp/01.jpg" alt=""></a>
+                    </div>
+                </div>
+                <!-- position: absolute -->
+                <img src="images/exp/img.png" alt="" class="exp__abs-image">
+            </section>
         </main>
         <footer class="footer">
             <div class="container"></div>
