--- a/index.html
+++ b/index.html
@@ -213,6 +213,25 @@
                 <!-- position: absolute -->
                 <img src="images/exp/img.png" alt="" class="exp__abs-image">
             </section>
+            <section class="ensure">
+                <div class="container">
+                    <h2 class="ensure__title title">Гарантируем положительный результат!</h2>
+                    <form action="#" class="ensure__form form">
+                        <h3 class="form__title">Беремся за самые сложные дела</h3>
+                        <p class="form__text">Получите бесплатно консультацию по своему вопросу</p>
+                        <p class="form__input-container">
+                            <input type="tel" name="tel" class="form__tel input-tel" placeholder="Введите ваш телефон" required>
+                            <input type="submit" class="form__button-back-call button-back-call" value="Получить инструкцию">
+                        </p>
+                        <p class="form__text-we">Мы перезвоним в течение 5 минут</p>
+                        <p class="form__checkbox-container">
+                            <input type="checkbox" required><span>Согласен с <a href="#">обработкой персональных данных</a></span>
+                        </p>
+                    </form>
+                </div>
+                <!-- position: absolute -->
+                <img src="images/ensure/01.png" alt="" class="ensure__abs-image">
+            </section>
         </main>
         <footer class="footer">
             <div class="container"></div>
