--- a/index.html
+++ b/index.html
@@ -232,6 +232,15 @@
                 <!-- position: absolute -->
                 <img src="images/ensure/01.png" alt="" class="ensure__abs-image">
             </section>
+            <section class="find">
+                <div class="container">
+                    <h2 class="find__title">Вы можете найти нас по адресу:</h2>
+                    <p class="find__address">г. Архангельск ул. Тимме, д. 77</p>
+                    <p class="find__phone">+7 (000) 000-00-00</p>
+                </div>
+                <!-- position: absolute -->
+                <iframe class="find__google-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae76448dc00502589a731d1b1acc6d3bfff486633a59454702d0dd739c487ace2&amp;source=constructor"></iframe>
+            </section>
         </main>
         <footer class="footer">
             <div class="container"></div>
