--- a/index.html
+++ b/index.html
@@ -241,6 +241,20 @@
                 <!-- position: absolute -->
                 <iframe class="find__google-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae76448dc00502589a731d1b1acc6d3bfff486633a59454702d0dd739c487ace2&amp;source=constructor"></iframe>
             </section>
+            <section class="arrange">
+                <div class="container">
+                    <form action="#" class="arrange__form form">
+                        <div class="form__input-container">
+                            <h3 class="form__title">Договориться о встрече на удобное для вас время:</h3>
+                            <input type="tel" name="tel" class="form__tel input-tel" placeholder="Введите ваш телефон" required>
+                            <input type="submit" class="form__button-back-call button-back-call" value="Получить инструкцию">
+                        </div>
+                        <p class="form__checkbox-container">
+                            <input type="checkbox" required><span>Согласен с <a href="#">обработкой персональных данных</a></span>
+                        </p>
+                    </form>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container"></div>
