--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="header__left">
                     <div class="header__logo">
                         <div class="header__img">
-                            <img src="images/header/logo.png" alt="">
+                            <img src="images/logo.png" alt="">
                         </div>
                         <h3 class="header__name">Агентство<br>по банкротству</h3>
                     </div>
@@ -257,7 +257,16 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="container"></div>
+            <div class="container">
+                <p class="footer__req">Реквизиты Реквизиты Реквизиты</p>
+                <div class="footer__logo">
+                    <div class="footer__img">
+                        <img src="images/logo.png" alt="">
+                    </div>
+                    <h3 class="footer__name">Агентство<br>по банкротству</h3>
+                </div>
+                <p class="footer__phone">+7 (000) 000-00-00</p>
+            </div>
         </footer>
         <!-- fixed -->
         <button data-fancybox data-src="#popup-back-call" class="fixed-pulse">
