--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <p class="find__phone">+7 (000) 000-00-00</p>
                 </div>
                 <!-- position: absolute -->
-                <iframe class="find__google-map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae76448dc00502589a731d1b1acc6d3bfff486633a59454702d0dd739c487ace2&amp;source=constructor"></iframe>
+                <iframe class="find__yandex-map"></iframe>
             </section>
             <section class="arrange">
                 <div class="container">
