clickable buttons, fix pulse

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     </div>
                 </div>
                 <div class="header__right">
-                    <h3 class="header__phone">+7 (000) 000-00-00</h3>
-                    <a href="#" class="header__button-back-call button-back-call">Заказать звонок</a>
+                    <a href="tel:+70000000000" class="header__phone">+7 (000) 000-00-00</a>
+                    <a data-fancybox href="javascript:;" data-src="#popup-back-call" class="header__button-back-call button-back-call">Заказать звонок</a>
                 </div>
             </div>
         </header>
@@ -47,15 +47,15 @@
                         <div class="homescreen__slider slider owl-carousel owl-theme">
                             <div class="slider__item">
                                 <h3 class="slider__title">Избавьтесь от долгов совершенно легально!</h3>
-                                <a href="#" class="slider__button-back-call button-back-call">Подробная консультация</a>
+                                <a data-fancybox href="javascript:;" data-src="#popup-back-call" class="slider__button-back-call button-back-call">Подробная консультация</a>
                             </div>
                             <div class="slider__item">
                                 <h3 class="slider__title">Избавьтесь от долгов совершенно легально!</h3>
-                                <a href="#" class="slider__button-back-call button-back-call">Подробная консультация</a>
+                                <a data-fancybox href="javascript:;" data-src="#popup-back-call" class="slider__button-back-call button-back-call">Подробная консультация</a>
                             </div>
                             <div class="slider__item">
                                 <h3 class="slider__title">Избавьтесь от долгов совершенно легально!</h3>
-                                <a href="#" class="slider__button-back-call button-back-call">Подробная консультация</a>
+                                <a data-fancybox href="javascript:;" data-src="#popup-back-call" class="slider__button-back-call button-back-call">Подробная консультация</a>
                             </div>
                         </div>
                         <!-- display: absolute -->
@@ -194,7 +194,7 @@
                             <p class="slider__text">Мы соберем и подготовим комплект документов более чем из 17 позиций. Вам не нужно будет посещать: банки, МФЦ, ПФР, ИНФНС, ГИБДД и другие места, мы сделаем это за вас!</p>
                         </div>
                     </div>
-                    <a href="#" class="proc__button-back-call button-back-call">Начать процедуру банкротства</a>
+                    <a data-fancybox href="javascript:;" data-src="#popup-back-call" class="proc__button-back-call button-back-call">Начать процедуру банкротства</a>
                 </div>
                 <!-- position: absolute -->
                 <img src="images/proc/book.png" alt="" class="proc__abs-image">
@@ -236,7 +236,7 @@
                 <div class="container">
                     <h2 class="find__title">Вы можете найти нас по адресу:</h2>
                     <p class="find__address">г. Архангельск ул. Тимме, д. 77</p>
-                    <p class="find__phone">+7 (000) 000-00-00</p>
+                    <a href="tel:+70000000000" class="find__phone">+7 (000) 000-00-00</a>
                 </div>
                 <!-- position: absolute -->
                 <iframe class="find__yandex-map"></iframe>
@@ -265,7 +265,7 @@
                     </div>
                     <h3 class="footer__name">Агентство<br>по банкротству</h3>
                 </div>
-                <p class="footer__phone">+7 (000) 000-00-00</p>
+                <a href="tel:+70000000000" class="footer__phone">+7 (000) 000-00-00</a>
             </div>
         </footer>
         <!-- fixed -->
