z-index: 1 for slider-dots

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <a data-fancybox href="javascript:;" data-src="#popup-back-call" class="slider__button-back-call button-back-call">Подробная консультация</a>
                             </div>
                             <div class="slider__item">
-                                <h3 class="slider__title">Избавьтесь от долгов сИзбавьтесь от долгов сИзбавьтесь от долгов сИзбавьтесь от долгов совершенно легально!</h3>
+                                <h3 class="slider__title">Избавьтесь от долгов совершенно легально!</h3>
                                 <a data-fancybox href="javascript:;" data-src="#popup-back-call" class="slider__button-back-call button-back-call">Подробная консультация</a>
                             </div>
                             <div class="slider__item">
